--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         </div>
         <div class="col-2"></div>
     </div>
+    <footer>
+        <p>Agregando footer</p>
+    </footer>
     <script src="./main.js"></script>
 </body>
 </html>
